--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   node-app:
-    build: gate-simulator
+    build: ./gate-simulator
     image: node-app:1.0
     container_name: node
     ports:
@@ -24,7 +24,7 @@ services:
 
   postgres:
     image: postgres:12.0-alpine
-    container_name: postgres-qa-diploma-z88m
+    container_name: postgresqltest
     ports:
       - '5432:5432'
     volumes:
