--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,31 @@
 version: '3.7'
 services:
-  node-app:
-    build: ./gate-simulator
-    image: node-app:1.0
-    container_name: node
-    ports:
-      - '9999:9999'
-
   mysql:
-    image: mysql:8.0.18
-    container_name: mysql-qa-diploma-z88m
-    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:latest
     command: --innodb_use_native_aio=0
     ports:
       - '3306:3306'
     volumes:
       - ./data:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_DATABASE=app
       - MYSQL_USER=app
       - MYSQL_PASSWORD=pass
 
   postgres:
     image: postgres:12.0-alpine
-    container_name: postgresqltest
     ports:
       - '5432:5432'
     volumes:
-      - ./pgdata:/var/lib/postgresql/pgdata
+      - ./data_pg:/var/lib/postgresql/data_pg
     environment:
-      - POSTGRES_PASSWORD=pass
-      - POSTGRES_USER=app
+      - POSTGRES_RANDOM_ROOT_PASSWORD=yes
       - POSTGRES_DB=app
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=pass
+
+  node-app:
+    build: ./gate-simulator
+    ports:
+      - '9999:9999'
