--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '5.3.0'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 group 'org.example'
@@ -10,16 +12,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'com.codeborne:selenide:5.11.0'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.30'
-    testImplementation 'mysql:mysql-connector-java:8.0.18'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'com.codeborne:selenide:6.10.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
-    testImplementation 'io.qameta.allure:allure-selenide:2.13.0'
-    testImplementation 'io.rest-assured:rest-assured:4.3.0'
-    testImplementation 'org.postgresql:postgresql:42.2.14'
+    testImplementation 'io.qameta.allure:allure-selenide:2.20.0'
+    testImplementation 'mysql:mysql-connector-java:8.0.30'
+    implementation 'org.postgresql:postgresql:42.5.1'
 }
 
 test {
