--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    systemProperty 'db.url', System.getProperty('db.url')
-    systemProperty 'db.username', System.getProperty('db.username')
-    systemProperty 'db.password', System.getProperty('db.password')
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'db.userName', System.getProperty('db.user', "app")
+    systemProperty 'db.password', System.getProperty('db.password', "pass")
+    systemProperty 'sut.url', System.getProperty('sut.url', "http://localhost:8080/")
 }
